# kio-learner

./: .gitignore  README  README.md
metalinkHttp/: CMakeLists.txt  main.cpp  metalinkHttp.cpp  metalinkHttp.cpp.orig  metalinkHttp.h  metalinkHttp.h.orig  metalinkHttp.kdev4  parseHttp.kdev4
showHttp/: CMakeLists.txt  main.cpp  showHttp.cpp  showHttp.h
